# ai-code-reviewer-py

./: .ai-reviewer-config.json  .env.example  .gitignore  LICENSE  README.md  debug-gemini-pro.js  main.py  package-lock.json  package.json  pyproject.toml  test-gemini.js  test-providers.js
ai_code_reviewer_py/: ai_reviewer.py  app_service.py  cli.py  config_loader.py  config_models.py  constants.py  enums.py  exceptions.py  git_analyzer.py  models.py
src/: ai-reviewer.js  cli.js  config-loader.js  demo.js  git-analyzer.js  git-hook-installer.js  index.js
tests/: __init__.py  test_ai_reviewer.py  test_app_service.py  test_cli.py  test_config_loader.py  test_git_analyzer.py  test_integration.py
